--- a/index.html
+++ b/index.html
@@ -21,22 +21,23 @@
   <link rel="apple-touch-icon" href="/favicon.ico" />
 
   <!-- 🔗 Canonical -->
-  <link rel="canonical" href="https://www.mosaicrealestate.com" />
-
+  <!-- <link rel="canonical" href="https://www.mosaicrealestate.com" /> -->
+  <link rel="canonical" href="https://www.mosaicrealestate.co" />
   <!-- 💬 Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.mosaicrealestate.com/" />
+  <!-- <meta property="og:url" content="https://www.mosaicrealestate.com/" /> -->
+  <meta property="og:url" content="https://www.mosaicrealestate.co/" />
   <meta property="og:title" content="Mosaic Real Estate" />
   <meta property="og:description"
     content="An architecture and design studio crafting purposeful, human-centered, and timeless spaces across the globe." />
-  <meta property="og:image" content="https://www.mosaicrealestate.com/preview.jpg" />
-
+  <!-- <meta property="og:image" content="https://www.mosaicrealestate.com/preview.jpg" /> -->
+  <meta property="og:image" content="/preview.jpg" />
   <!--  Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Mosaic Real Estate" />
   <meta name="twitter:description" content="Global architecture and design studio blending innovation with legacy." />
-  <meta name="twitter:image" content="https://www.mosaicrealestate.com/preview.jpg" />
-
+  <!-- <meta name="twitter:image" content="https://www.mosaicrealestate.com/preview.jpg" /> -->
+  <meta name="twitter:image" content="/preview.jpg" />
   <!-- 🏢 Schema.org Organization Markup -->
   <!-- <script type="application/ld+json">
   {
