--- a/index.html
+++ b/index.html
@@ -39,19 +39,15 @@
   <!-- <meta name="twitter:image" content="https://www.mosaicrealestate.com/preview.jpg" /> -->
   <meta name="twitter:image" content="/preview.jpg" />
   <!-- 🏢 Schema.org Organization Markup -->
-  <!-- <script type="application/ld+json">
+  <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Mosaic Real Estate",
     "url": "https://www.mosaicrealestate.com",
     "logo": "https://www.mosaicrealestate.com/favicon.png",
-    "sameAs": [
-      "https://www.linkedin.com/company/datta-tayefi",
-      "https://www.instagram.com/datta.tayefi"
-    ]
   }
-  </script> -->
+  </script>
 
   <!-- 🧠 Default Vite Script -->
   <script type="module" src="/src/main.jsx"></script>
